--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
     <div class="source">
         <p>Source Code : </p>
-        <a href="#">GitHub</a>
+        <a href="https://github.com/Kotak-Prerit/zomato-clone">GitHub</a>
     </div>
 
     <footer>
